# fastapi_template

./: .gitignore  .gitlab_ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  uvicorn_logs_config.yaml
app/: main.py
app/config/: exception_config.py  log_config.py  settings.py
app/entity/: main_router.py
app/entity/address/: db.py  schema.py
app/entity/address/v1/: schema.py
app/entity/base/: db.py  deps.py  pageable.py  repository.py  router.py  schema.py
app/entity/order/: db.py  repository.py  service.py
app/entity/order/v1/: router.py  schema.py
app/utils/: db.py
envs/: dev.env  prod.env
migrations/: env.py
migrations/versions/: 2025-01-04_1541_3a98c7230132.py
tests/: conftest.py
tests/entity/order/v1/: test_router.py
tests/integrations/: test_order_controller.py
